fixed the z-index of the project titles and nav button on snall screens

--- a/src/custom/custom.css
+++ b/src/custom/custom.css
@@ -145,7 +145,7 @@ body {
   position: fixed;
   display: flex;
   flex-direction: column;
-  z-index: 1;
+  z-index: 2;
   width: 15%;
   max-width: 15em;
   right: 0;
@@ -195,6 +195,7 @@ body {
 .thumbnail {
   width: 100%;
   max-width: 640px;
+  /* z-index: -1; */
 }
 .animation-container {
   position: relative;
@@ -293,7 +294,9 @@ body {
 }
 .button-text {
   /* margin: 2em; */
+  position: relative;
   text-decoration: none;
+  z-index: 3;
 }
 @media (min-width: 1100px) {
   .landing-page > p {
@@ -319,11 +322,11 @@ body {
     flex-direction: row;
     flex-grow: 1;
     gap: 20px;
-    z-index: 1;
+    z-index: 2;
     width: 100%;
     max-width: 100%;
     bottom: 0;
-    justify-content: center;
+    justify-content: space-around;
     /* left: 0; */
   }
   .button {
@@ -396,7 +399,7 @@ body {
   font-family: Oxanium, san;
   display: block; 
   position: absolute; 
-  z-index: 2; 
+  z-index: 1; 
   left: 0;
   top: 0;
   width: 100%; 
